src/assets/css/styles.css
/* fonts */
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap");

body {
  font-family: "Open Sans", sans-serif;
  color: #004763;
  margin: 0;
  padding: 0;
}

:root {
  --main-color: #004763;
}

.fa,
.fas {
  color: var(--main-color);
}

.main-color {
  color: var(--main-color);
  font-weight: 600;
}

a,
a:hover,
a:focus {
  text-decoration: none;
  color: var(--main-color);
}

button,
.a-button {
  border-radius: 2px;
  width: 197px;
  height: 37px;
  text-transform: capitalize;
}

.btn-primary,
.btn-primary:hover {
  background-color: #004763;
  color: #fff;
  border-color: #004763 !important;
}

.btn-outline-primary,
.btn-outline-primary:hover,
.btn-outline-primary:focus {
  border: 1px solid var(--main-color);
  color: var(--main-color);
  background-color: #fff;
  outline: none !important;
  box-shadow: none !important;
}

.btn-current-active,
.btn-current-active:hover,
.btn-current-active:focus {
  background-color: var(--main-color);
  color: #fff;
  border-color: var(--main-color);
}
.display-none {
  display: none;
}

.btn-sm {
  width: 120px;
  height: 33px;
  font-weight: 500;
}

.btn-sm:hover {
  background-color: #004763;
  color: #fff;
  border-color: #004763 !important;
}

.table-bordered-none {
  border: none;
}

thead th {
  color: var(--main-color);
  font-weight: 600;
}

tbody tr td {
  font-size: 13px;
}

.form-check-input:checked {
  color: var(--main-color);
  border-color: #004763;
  background-color: var(--main-color);
}

.text-bold {
  font-weight: 600;
}

.paragraph-1 {
  font-size: 0.8em;
  color: rgb(0, 0, 0);
}

.mr-5 {
  margin-right: 40px;
}

.display-none {
  display: none;
}
/* top navigation */

.navbar-expand-lg {
  background-color: #fff;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
  padding: 14px 14px 14px 14px;
}

.logo span {
  font-size: 1em;
  font-weight: 600;
  color: #004763;
  margin-right: 50px;
}

.search-input {
  border: 1.5px solid var(--main-color);
  margin-right: 110px;
  margin-left: 110px;
  padding: 1px;
  margin-top: 8px;
  color: #004763;
  width: 260px;
}

.search-input:focus {
  border: 1px solid var(--main-color);
  outline: none;
}

.search-input::placeholder {
  color: #004763;
  font-size: 18px;
}

.date-time {
  margin-top: 5px;
}

.icon {
  font-size: 20px;
  margin: 5px;
}

.current-date {
  font-size: 15px;
  margin-right: 10px;
  font-weight: 900;
}

.user-info {
  margin-left: 35px;
  border-left: 2px solid #ccc;
}
.user-info .fa-user-circle {
  font-size: 1.8em;
  margin: 5px 10px 0px 10px;
}

.user-names {
  font-size: 0.8em;
  font-weight: 900;
  color: #004763;
  margin-top: 10px;
  line-height: 14px;
}

.user-info .fa-chevron-down {
  font-size: 0.8em;
  margin-left: 10px;
  margin-top: 15px;
}

/* sidebar */

.sidebar {
  width: 180px;
  position: fixed;
  left: 0;
  height: 100%;
  background: #f1f1f0;
}
.sidebar-menu ul {
  list-style-type: none;
  margin-top: 2em;
  padding: 0;
  width: 170px;
}

.sidebar-menu li {
  margin: 0.2rem;
  padding-left: 1.3em;
  text-align: left;
  font-size: 15px;
}
.sidebar-menu li a {
  display: block;
  color: var(--main-color);
  text-decoration: none;
  padding: 4px 16px;
}
.sidebar-menu li a:hover,
.active {
  background-color: #db3f7079;
  color: #004763;
}

.copyright {
  margin-top: 10px;
  text-align: center;
  font-size: 0.8em;
  color: #004763;
}
footer {
  margin-top: 160%;
}

/* content */
.content {
  margin: 0px 0px 0px 50px;
  padding: 0.5em;
}

/* ======================== Dashboard ================================== */

.card{
  box-shadow:0 1px 1px 1px #ccc;
  padding: 25px;
}
.small-txt{
  text-align: center;
}
.tableDay{
  margin-bottom:30px ;
  padding: 15px;
  height: 20vh;

}
.cell{
  margin-left: -50%;

}
.card-btn{
  background-color: #004763;
  color: #FFFFFF;
  outline:none;
  border: none;
  border-radius: 2px;
  padding: 1px 23px;

}


/* ======================== Hiring ===================================== */
.activebuttons{
  color: #fff;
  background-color: #004763;
}
.h:hover{
  color: #fff;
  background-color: #004763f6;
}


/* ======================== Leave manager ============================== */
.button-group {
  margin-top: 20px;
}

.button-group div button,
.a-button {
  margin-right: 10px;
}

/* ======================== Reports ==================================== */

/* ======================== Staff ====================================== */
.top-header-table {
  box-shadow: -1px 5px 2px -1px rgba(138, 134, 134, 0.5);
  -webkit-box-shadow: -1px 2px 5px -1px rgba(138, 134, 134, 0.5);
  -moz-box-shadow: -1px 5px 2px -1px rgba(138, 134, 134, 0.5);
  padding: 5px;
}

.top-header-table .justify-content-between {
  margin-top: 10px;
  text-align: center;
  font-size: 15px;
}

.top-header-table .form-select {
  margin-left: 5px;
  width: 100px;
  height: 30px;
  font-size: 10px;
}


/* departments styling */

.btnhomed{
  border: none;
  color: #004763;
  cursor: pointer;
  text-transform: capitalize;
  font-family: Regular, Semibold and Bold;
  border: 2px solid;
  box-shadow: 1px 1px 1px 1px #004763;
  text-align: center;
  margin:0 2rem;
  border-radius: 2px;
  padding-top: -1rem;
  font-size: 1.3rem;
  padding-left: 4rem;
  padding-right: 4rem;

}
.btnhomed:active{
  background-color: #004763;
  color: white;
}


table, tr, td,th {
  border: none;
}



.btnnn {
  border: none;
  color: #004763;
  padding: 12px 16px;
  font-size: 20px;
  cursor: pointer;
  border-radius: 2px;
  border: 1px solid;
  padding-left: 2rem;
  padding-right: 2rem;
  margin:0 2rem;
  background-color: white;
  height: 3rem;
  text-transform: capitalize;

}


.classed{
    display: flex;
    box-shadow: 1px 1px 2px 2px #dadfe0;
    margin-top: 4rem;
    height: 4.1rem;



}

.classed p{
  font-family: Regular, Semibold and Bold;
  font-size: 1.5rem;
  color: black;
}

.down{
position: absolute;
right: 120px;



}

.down button{
  color: white;
  background-color: #004763;
  border-radius: 8px;
}

.john{
  color: #004763;
  font-family: Regular, Semibold and Bold;
  font-size: 1.5rem;
}


.tableth{
  color: #004763;
  font-family: Regular, Semibold and Bold;
  font-size: 1.5rem;

}

.table td{
  font-family: Regular, Semibold and Bold;
  font-size: 1rem;

}
tr{
  font-size: .9rem;
}

